--- a/Site/index.html
+++ b/Site/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projeto Firebase</title>
+    <link rel="stylesheet" type="text/css" href="stilo.css">
+    
 </head>
 <body>
+    <div id="texto">
     <h1>SITE EXEMPLO</h1>
+    <h2>OLÁ, THIAGO!</h2>
+</div>
 </body>
 </html>
